--- a/index.html
+++ b/index.html
@@ -1,28 +1,71 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head><meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Inicio</title></head>
-<body style="background-color: rgb(255, 255, 204); color: rgb(0, 0, 0);" alink="#ee0000" link="#0000ee" vlink="#551a8b"><div style="text-align: left;"><span style="color: black;">&nbsp;</span><big style="color: black;"><big><img style="width: 242px; height: 160px;" alt="animales" src="imagnes/descarga.jpg"></big></big><b style=""><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Agency FB&quot;,sans-serif;"><big style="color: black;"><big>Bienvenido al sitio web: Los animales<br><br><br></big></big></span></b>
+<html><head>
+<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"><title>index</title>
+(HTML 5)
 
+(HTML 4)
+</head>
+<body style="background-color: rgb(255, 255, 204); color: rgb(0, 0, 0);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
+<div style="text-align: left;"><span style="color: black;">&nbsp;</span><big style="color: black;"><big><img style="width: 242px; height: 160px;" alt="animales" src="imagnes/descarga.jpg"></big></big><b style=""><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Agency FB&quot;,sans-serif;"><big style="color: black;"><big>Bienvenido al sitio web:
+Los animales<br>
+<br>
+<br>
+</big></big></span></b>
 <p class="MsoNormal" style="text-align: justify; line-height: 115%;"><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Arial&quot;,sans-serif;"><small>Hay
-algunas características que hacen un poco más fácil distinguir a un animal de
-una planta, por ejemplo: un animal es un organismo que nace de un huevo o del
-vientre de otro ser vivo, se mueve y puede desplazarse, tiene un órgano para
-alimentarse y como a otros seres vivos para nutrirse. Pero resulta menos fácil
+algunas características que hacen un poco más fácil distinguir a un
+animal de
+una planta, por ejemplo: un animal es un organismo que nace de un huevo
+o del
+vientre de otro ser vivo, se mueve y puede desplazarse, tiene un órgano
+para
+alimentarse y como a otros seres vivos para nutrirse. Pero resulta
+menos fácil
 distinguir a los diferentes animales entre sí.</small><o:p></o:p></span></p>
-
-<p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: 115%;"><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Arial&quot;,sans-serif;"><small>Mucha gente clasifica a los animales por lo que
-acostumbran comer, o por el lugar donde viven, por su apariencia, o por lo que
-hacen. Estas clasificaciones pueden ser útiles en algunos casos, pero en otros
-no, por ejemplo: se dice que todos los animales se mueven y que las plantas no.
-Sin embargo, sabemos que las plantas abren o cierran sus flores siguiendo la
-luz. Por el contrario, hay animales que no se mueven, por ejemplo, algunos
-organismos marinos como el coral, la anémona, las esponjas y otros, que se
-encuentran fijos a las rocas y que para conseguir su alimento esperan que las
+<p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: 115%;"><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Arial&quot;,sans-serif;"><small>Mucha
+gente clasifica a los animales por lo que
+acostumbran comer, o por el lugar donde viven, por su apariencia, o por
+lo que
+hacen. Estas clasificaciones pueden ser útiles en algunos casos, pero
+en otros
+no, por ejemplo: se dice que todos los animales se mueven y que las
+plantas no.
+Sin embargo, sabemos que las plantas abren o cierran sus flores
+siguiendo la
+luz. Por el contrario, hay animales que no se mueven, por ejemplo,
+algunos
+organismos marinos como el coral, la anémona, las esponjas y otros, que
+se
+encuentran fijos a las rocas y que para conseguir su alimento esperan
+que las
 corrientes de agua lo acerquen a ellos.&nbsp;</small></span>
-
-</p><p class="MsoNormal" style="margin-bottom: 0.0001pt; line-height: 115%; text-align: center;"><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Arial&quot;,sans-serif;"><big style="font-family: Dosis SemiBold;">¡Les invito a navegar en el sitio web y
+</p>
+<p class="MsoNormal" style="margin-bottom: 0.0001pt; line-height: 115%; text-align: center;"><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Arial&quot;,sans-serif;"><big style="font-family: Dosis SemiBold;">¡Les invito a navegar
+en el sitio web y
 conocerlos!</big><o:p></o:p></span></p>
-<p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: 115%;"></p><div style="text-align: center;">&nbsp; &nbsp; &nbsp; &nbsp; <img style="width: 531px; height: 503px;" alt="animales2" src="imagnes/9788426145369.jpg"> &nbsp; &nbsp; &nbsp; &nbsp;<br><table style="text-align: left; width: 100%;" border="1" cellpadding="2" cellspacing="2"><tbody><tr><td style="background-color: rgb(153, 255, 153); color: rgb(204, 0, 0); text-align: center;"><big><big><a href="Los%20animales.html">Los animales</a></big></big></td><td style="background-color: rgb(153, 255, 153); color: rgb(204, 0, 0); text-align: center;"><big><big>Vertebrados</big></big></td><td style="background-color: rgb(153, 255, 153); color: rgb(204, 0, 0); text-align: center;"><big><big>Invertebrados</big></big></td><td style="background-color: rgb(153, 255, 153); color: rgb(204, 0, 0); text-align: center;"><big><big>Contactos</big></big></td></tr></tbody></table></div><p class="MsoNormal" style="margin-bottom: 0.0001pt; line-height: 115%; text-align: center; font-weight: bold;">Todos los derechos reservados<br>Elaborado por el Alumno:<br>Grupo: 603<br>EMSaD 18 Chiná</p><div style="text-align: left;"><br>&nbsp; &nbsp;&nbsp;<a href="Los%20animales.html"><button value="a1" type="button"><big><big><big><big><span style="font-weight: bold;">Botón</span></big></big></big></big></button></a><big><big><big><big><span style="font-weight: bold;"></span></big></big></big></big><br clear="all"></div><p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: 115%;"><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Arial&quot;,sans-serif;"><o:p></o:p></span></p>
-<p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: 115%;"><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Arial&quot;,sans-serif;"><small></small><o:p></o:p></span></p>
-
-
-</div></body></html>
+<p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: 115%;"></p>
+<div style="text-align: center;">&nbsp; &nbsp;
+&nbsp; &nbsp; <img style="width: 531px; height: 503px;" alt="animales2" src="imagnes/9788426145369.jpg">
+&nbsp; &nbsp; &nbsp; &nbsp;<br>
+<table style="text-align: left; width: 100%;" border="1" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td style="background-color: rgb(153, 255, 153); color: rgb(204, 0, 0); text-align: center;"><big><big><a href="Los%20animales.html">Los animales</a></big></big></td>
+<td style="background-color: rgb(153, 255, 153); color: rgb(204, 0, 0); text-align: center;"><big><big>Vertebrados</big></big></td>
+<td style="background-color: rgb(153, 255, 153); color: rgb(204, 0, 0); text-align: center;"><big><big>Invertebrados</big></big></td>
+<td style="background-color: rgb(153, 255, 153); color: rgb(204, 0, 0); text-align: center;"><big><big>Contactos</big></big></td>
+</tr>
+</tbody>
+</table>
+</div>
+<p class="MsoNormal" style="margin-bottom: 0.0001pt; line-height: 115%; text-align: center; font-weight: bold;">Todos
+los derechos reservados<br>
+Elaborado por el Alumno:<br>
+Grupo: 603<br>
+EMSaD 18 Chiná</p>
+<div style="text-align: left;"><br>
+&nbsp; &nbsp;&nbsp;<a href="Los%20animales.html"><button value="a1" type="button"><big><big><big><big><span style="font-weight: bold;">Botón</span></big></big></big></big></button></a><big><big><big><big><span style="font-weight: bold;"></span></big></big></big></big><br clear="all">
+</div>
+<p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: 115%;"><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Arial&quot;,sans-serif;"><o:p></o:p></span></p>
+<p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: 115%;"><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Arial&quot;,sans-serif;"><o:p></o:p></span></p>
+</div>
+</body></html>
