--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"><title>index</title>
-(HTML 5)
+<meta charset="&#8221;utf-8&#8243;"> (HTML 5) <meta http-equiv="&#8221;Content-Type&#8221;" content="&#8221;text/html;" charset="utf-8&#8243;"><title>index</title> (HTML 4)
 
+(HTML 5)
 (HTML 4)
 </head>
 <body style="background-color: rgb(255, 255, 204); color: rgb(0, 0, 0);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
