--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta charset="&#8221;utf-8&#8243;"> (HTML 5) <meta http-equiv="&#8221;Content-Type&#8221;" content="&#8221;text/html;" charset="utf-8&#8243;"><title>index</title> (HTML 4)
-
+<meta charset="&#8221;utf-8&#8243;">
 (HTML 5)
-(HTML 4)
+<meta http-equiv="&#8221;Content-Type&#8221;:" utf-8=""><title>index</title>
+
 </head>
 <body style="background-color: rgb(255, 255, 204); color: rgb(0, 0, 0);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
 <div style="text-align: left;"><span style="color: black;">&nbsp;</span><big style="color: black;"><big><img style="width: 242px; height: 160px;" alt="animales" src="imagnes/descarga.jpg"></big></big><b style=""><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Agency FB&quot;,sans-serif;"><big style="color: black;"><big>Bienvenido al sitio web:
