--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta charset="&#8221;utf-8&#8243;">
-(HTML 5)
-<meta http-equiv="&#8221;Content-Type&#8221;:" utf-8=""><title>index</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title>index</title>
 
 </head>
 <body style="background-color: rgb(255, 255, 204); color: rgb(0, 0, 0);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
