--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 </head>
 <body style="background-color: rgb(255, 255, 204); color: rgb(0, 0, 0);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
-<div style="text-align: left;"><span style="color: black;">&nbsp;</span><big style="color: black;"><big><img style="width: 242px; height: 160px;" alt="animales" src="imagnes/descarga.jpg"></big></big><b style=""><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Agency FB&quot;,sans-serif;"><big style="color: black;"><big>Bienvenido al sitio web:
+<div style="text-align: left;"><span style="color: black;">&nbsp;</span><big style="color: black;"><big><img style="width: 242px; height: 160px;" alt="animales" src="descarga.jpg"></big></big><b style=""><span style="font-size: 16pt; line-height: 115%; font-family: &quot;Agency FB&quot;,sans-serif;"><big style="color: black;"><big>Bienvenido al sitio web:
 Los animales<br>
 <br>
 <br>
@@ -42,7 +42,7 @@ en el sitio web y
 conocerlos!</big><o:p></o:p></span></p>
 <p class="MsoNormal" style="margin-bottom: 0.0001pt; text-align: justify; line-height: 115%;"></p>
 <div style="text-align: center;">&nbsp; &nbsp;
-&nbsp; &nbsp; <img style="width: 531px; height: 503px;" alt="animales2" src="imagnes/9788426145369.jpg">
+&nbsp; &nbsp; <img style="width: 531px; height: 503px;" alt="animales2" src="9788426145369.jpg">
 &nbsp; &nbsp; &nbsp; &nbsp;<br>
 <table style="text-align: left; width: 100%;" border="1" cellpadding="2" cellspacing="2">
 <tbody>
