--- a/Los animales.html
+++ b/Los animales.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1"><title>Los animales</title>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"><title>Los animales</title>
 
 </head>
 <body style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 204); background-image: url(istockphoto-1248803321-170667a.jpg);" alink="#ee0000" link="#0000ee" vlink="#551a8b">
